* Changed to open source version unicows for win9x users, perhaps this one will work better for you (see it as a
  last attempt; if it doesn't work, w9x support will be phased out completely unless someone else solves the win9x
  issues)
* [bug 774] Fixed invalid description being sent if hub modifies it
* [bug 818] Fixed default exit mnemonic
* Fixed some more crashes (thanks bigmuscle)

-- 0.6811 2006-01-21 --
* Fixed a socket race condition leading to failing connections and crashes

-- 0.681 2006-01-21 --
* Fixed a crash when using slow sources disconnect
* Fixed system log overflow
* Minor user command fix (thanks garg)
* Removed some duplicate code (thanks trem)
* Ctrl-a to select all items in a list (thanks garg)
* [bug 484] Added a check for multiple refreshes running at the same time (thanks trem)
* Fixed a few crashes here and there
* Fixed no-slots message not being sent out always
* Fixed yassl build locations (thanks pothead)
* Added ip resolve cache when searching (thanks trem)
* [bug 413] Failed file moves are now reported to the system log

-- 0.68 2006-01-08 --
* Changed the user identification process completely to work better with ADC. This leads to a more strict interpretation of
  which users are actually the same for NMDC (essentially, NMDC users are now identified by nick+hub always, not only nick)
* Removed saving of directories scheduled for download, since the individual files should appear in the queue fast enough that
  this will rarely be used (since file lists are free and downloaded almost instantly)
* Fixed international timestamps (thanks ullner)
* Fixed targetdrive docs (thanks ullner)
* [bug 485] Fixed transfer list view flicker on WinXP
* New connection settings, please check settings page
* Connection type strings changed
* No longer falls back to passive mode on failed UPnP
* Janitorial cleanups (thanks garg)
* Removed some old favorite file format compatibility code
* Added country to search frame (thanks paka)