@@ -35,10 +35,14 @@ BufferedSocket::BufferedSocket(char aSeparator) throw() :
 separator(aSeparator), mode(MODE_LINE), 
 dataBytes(0), rollback(0), failed(false), sock(0), disconnecting(false)
 {
+	sockets++;
 }
+
+size_t BufferedSocket::sockets = 0;
 
 BufferedSocket::~BufferedSocket() throw() {
 	delete sock;
+	sockets--;
 }
 
 void BufferedSocket::accept(const Socket& srv, bool secure) throw(SocketException, ThreadException) {
@@ -206,6 +210,7 @@ void BufferedSocket::threadSendFile(InputStream* file) throw(Exception) {
 		}
 
 		size_t done = 0;
+		size_t doneRead = 0;
 		while(done < actual) {
 			if(disconnecting)
 				return;
@@ -219,8 +224,10 @@ void BufferedSocket::threadSendFile(InputStream* file) throw(Exception) {
 				if(written > 0) {
 					done += written;
 
-					fire(BufferedSocketListener::BytesSent(), bytesRead, written);
-					bytesRead = 0;		// Make sure we only report the bytes we actually read just once...
+					size_t doneReadNow = static_cast<size_t>((static_cast<double>(done)/actual) * bytesRead);
+
+					fire(BufferedSocketListener::BytesSent(), doneReadNow - doneRead, written);
+					doneRead = doneReadNow;
 				}
 			}
 		}
@@ -360,5 +367,5 @@ void BufferedSocket::shutdown() {
 
 /**
  * @file
- * $Id: BufferedSocket.cpp,v 1.99 2006/02/11 21:01:54 arnetheduck Exp $
+ * $Id: BufferedSocket.cpp,v 1.100 2006/02/12 18:16:12 arnetheduck Exp $
  */
