@@ -85,10 +85,11 @@ void startup(void (*f)(void*, const string&), void* p) {
 }
 
 void shutdown() {
-	TimerManager::getInstance()->removeListeners();
-
+	TimerManager::getInstance()->shutdown();
 	HashManager::getInstance()->shutdown();
 	ConnectionManager::getInstance()->shutdown();
+
+	BufferedSocket::waitShutdown();
 
 	SettingsManager::getInstance()->save();
 	
@@ -113,5 +114,5 @@ void shutdown() {
 
 /**
  * @file
- * $Id: DCPlusPlus.cpp,v 1.42 2005/12/12 08:43:00 arnetheduck Exp $
+ * $Id: DCPlusPlus.cpp,v 1.43 2006/02/12 18:16:12 arnetheduck Exp $
  */
