@@ -32,6 +32,7 @@ const string UserConnection::FEATURE_ADCGET = "ADCGet";
 const string UserConnection::FEATURE_ZLIB_GET = "ZLIG";
 const string UserConnection::FEATURE_TTHL = "TTHL";
 const string UserConnection::FEATURE_TTHF = "TTHF";
+const string UserConnection::FEATURE_ADC_BASE = "BAS0";
 
 const string UserConnection::FILE_NOT_AVAILABLE = "File Not Available";
 
@@ -208,5 +209,5 @@ void UserConnection::on(BufferedSocketListener::Failed, const string& aLine) thr
 
 /**
  * @file
- * $Id: UserConnection.cpp,v 1.57 2006/02/11 21:01:54 arnetheduck Exp $
+ * $Id: UserConnection.cpp,v 1.58 2006/02/12 18:16:12 arnetheduck Exp $
  */
