@@ -26,6 +26,7 @@
 * [bug 774] Fixed invalid description being sent if hub modifies it
 * [bug 818] Fixed default exit mnemonic
 * Fixed some more crashes (thanks bigmuscle)
+* Fixed some shutdown issues
 
 -- 0.6811 2006-01-21 --
 * Fixed a socket race condition leading to failing connections and crashes
